--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "pinia": "^2.1.7",
+    "sass": "^1.75.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
@@ -20,8 +24,11 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-vue": "^9.23.0",
     "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
+    "standard": "^17.1.0",
     "vite": "^5.2.8"
   }
 }
