--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sass": "^1.75.0",
     "vue": "^3.4.21",
     "vue-axios": "^3.5.2",
+    "vue-loading-overlay": "6.0",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
